[gd_scene load_steps=6 format=3]

[ext_resource type="Script" path="res://Ingame/layers/hud/help_tips/help_tips.gd" id="1_ovly0"]
[ext_resource type="Texture2D" uid="uid://df0nori5j7y4k" path="res://UI/sprites/control-pad.png" id="2_pxhih"]
[ext_resource type="Script" path="res://Ingame/layers/hud/help_tips/controls.gd" id="3_ppvbv"]
[ext_resource type="PackedScene" uid="uid://cv385iasb73a4" path="res://UI/label/label.tscn" id="4_hpej5"]
[ext_resource type="Texture2D" uid="uid://bidhgcf4w0scj" path="res://UI/sprites/control-qwerty.png" id="5_kbyum"]

[node name="help_tips" type="Control" groups=["HELP_TIPS", "PROGRESS_LISTENER"]]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_ovly0")

[node name="saved_label" parent="." instance=ExtResource("4_hpej5")]
position = Vector2(576, 8)
text = "Game saved"
centered = true
first_half_color = Color(0.890196, 0.890196, 0.890196, 1)
last_half_color = Color(0.956863, 0.823529, 0.721569, 1)

[node name="pad_sprite" type="Sprite2D" parent="."]
position = Vector2(8, 8)
texture = ExtResource("2_pxhih")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 64, 64)
script = ExtResource("3_ppvbv")

[node name="querty_sprite" type="Sprite2D" parent="."]
position = Vector2(8, 8)
texture = ExtResource("5_kbyum")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 64, 64)
script = ExtResource("3_ppvbv")
